<resources>
    <string name="app_name">Qurani</string>
    <string name="pengaturan">PENGATURAN</string>
    <string name="jadwal_sholat">JADWAL SHOLAT</string>
    <string name="pencarian">PENCARIAN</string>
    <string name="terakhir_baca">TERAKHIR BACA</string>
    <string name="baca_qur_an">BACA QUR\'AN</string>
    <string name="qurani_desc">Qurani v1.0</string>
    <string name="title_activity_baca_quran">BacaQuran</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_pengaturan">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
